--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,16 @@
 #slideshow {
-  width:200px;
-  height:200px;
+  width:300px;
+  height:300px;
   position: relative;
   overflow: hidden;
+  border: 5px solid #00AAff;
+  display: inline-block;
+}
+#linklist {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 40px;
+}
+#preview {
+  position: absolute;
 }
